--- a/stylesheet.css
+++ b/stylesheet.css
@@ -32,8 +32,11 @@ ul {
 }
 
 header, footer {
+    display:-webkit-flex;
     display:flex;
+    -webkit-flex-wrap:wrap;
     flex-wrap:wrap;
+    -webkit-justify-content: space-around;
     justify-content: space-around;
     
     text-transform:uppercase;
@@ -49,6 +52,7 @@ header, footer {
 header {
     background-image: url("img/background-banner.jpg");
     background-size: cover;
+    -webkit-align-items: center;
     align-items: center;
     box-shadow: 0px 2px 5px 2px rgb(179,204,51);
 }
@@ -60,7 +64,9 @@ footer {
     background-color: /*rgb(179,204,51);*//*rgb(125,143,36);*/rgb(110,82,27);
     box-shadow: 0px -2px 5px 2px rgb(110,82,27);
     
+    -webkit-align-items: flex-end;
     align-items: flex-end;
+    -webkit-justify-content: space-between;
     justify-content: space-between;
 }
 footer::after {
@@ -138,9 +144,12 @@ section {
     padding-right: 10%;
     /*background-color : rgb(243,247,224);*//*rgb(232,239,192);*/
     
+    display: -webkit-flex;
     display: flex;
+    -webkit-flex-direction:column;
     flex-direction:column;
     /*justify-content:center;*/
+    -webkit-align-items:center;
     align-items:center;
 }
 
@@ -173,7 +182,9 @@ section > * {
 }
 
 .person-header {
+    display: -webkit-flex;
     display: flex;
+    -webkit-align-items: flex-start;
     align-items: flex-start;
 }
 
