--- a/stylesheet.css
+++ b/stylesheet.css
@@ -219,6 +219,18 @@ th, td {
     border: 1px solid rgb(200,200,200);
 }
 
+.api, .api-method {
+    width: 90%;
+}
+
+.api-body {
+    width: 100%;
+    height: 100%;
+    border-style: none;
+    border-radius: 5px;
+    background-color: rgb(224,224,224);
+}
+
 .priority-none {
     color: rgb(103,103,103);
 }
