--- a/stylesheet.css
+++ b/stylesheet.css
@@ -219,10 +219,6 @@ th, td {
     border: 1px solid rgb(200,200,200);
 }
 
-.api, .api-method {
-    width: 90%;
-}
-
 .api-body {
     width: 100%;
     height: 100%;
@@ -252,3 +248,13 @@ th, td {
     /*background-color : rgb(228,159,145);*/
 }
 
+.demo-link {
+    display:inline-block;
+    background-color: rgb(179,204,51);
+    color: white;
+    width:40%;
+    font-size: 2em;
+    padding: 1em;
+    text-align: center;
+    border-radius: .3em;
+}
